--- a/datasets/NC_types_random_000_rapport.json
+++ b/datasets/NC_types_random_000_rapport.json
@@ -118,9 +118,9 @@
       {"name":"nc_event_id","type":"string"},
       {"name":"llm_output","type":"string"},
       {"name":"llm_validation_status","type":"string"},
-      {"name":"llm_raw_query","type":"string"},
       {"name":"llm_raw_response","type":"string"},
-      {"name":"llm_error_message","type":"string"}
+      {"name":"llm_error_message","type":"string"},
+      {"name":"llm_raw_query","type":"string"}
     ],
     "userModified": true
   },
