--- a/datasets/NC_types_random_000_rapport_structured.json
+++ b/datasets/NC_types_random_000_rapport_structured.json
@@ -124,8 +124,7 @@
       {"name":"000_rapport_style","type":"string"},
       {"name":"000_rapport_label","type":"string"},
       {"name":"000_rapport_date","type":"date"},
-      {"name":"000_rapport_description","type":"string"},
-      {"name":"000_rapport_foreign maintenance substances,","type":"string"}
+      {"name":"000_rapport_description","type":"string"}
     ],
     "userModified": true
   },
