--- a/zones/DDNXuVn.json
+++ b/zones/DDNXuVn.json
@@ -1,7 +1,16 @@
 {
   "name": "200 - Design Manager",
   "color": "#C54F00",
-  "items": [],
+  "items": [
+    {
+      "objectId": "compute_NC_types_random_200_analysis_validation_structured",
+      "objectType": "RECIPE"
+    },
+    {
+      "objectId": "NC_types_random_200_analysis_validation_structured",
+      "objectType": "DATASET"
+    }
+  ],
   "shared": [],
   "position": {},
   "tags": [],
