--- a/zones/DDNXuVn.json
+++ b/zones/DDNXuVn.json
@@ -9,6 +9,14 @@
     {
       "objectId": "NC_types_random_200_analysis_validation_structured",
       "objectType": "DATASET"
+    },
+    {
+      "objectId": "compute_NC_types_random_200_analysis_validation",
+      "objectType": "RECIPE"
+    },
+    {
+      "objectId": "NC_types_random_200_analysis_validation",
+      "objectType": "DATASET"
     }
   ],
   "shared": [],
