Set monitoring on datasetNONCONFORMITIES.NC_types_random_000_rapport

--- a/datasets/NC_types_random_000_rapport.json
+++ b/datasets/NC_types_random_000_rapport.json
@@ -206,7 +206,7 @@
     }
   },
   "metricsChecks": {
-    "monitor": false,
+    "monitor": true,
     "checks": [
       {
         "type": "ValuesInSetRule",
