Save data quality config on dataset NC_types_random_000_rapport

--- a/datasets/NC_types_random_000_rapport.json
+++ b/datasets/NC_types_random_000_rapport.json
@@ -217,7 +217,7 @@
           "VALID"
         ],
         "id": "SVuVNewg",
-        "displayName": "Validation JSON OK",
+        "displayName": "Validation JSON sortie LLM OK",
         "computeOnBuildMode": "PARTITION",
         "autoRun": true,
         "enabled": true
