Save data quality config on dataset NC_types_random_000_rapport

--- a/datasets/NC_types_random_000_rapport.json
+++ b/datasets/NC_types_random_000_rapport.json
@@ -220,7 +220,7 @@
         "displayName": "Validation JSON sortie LLM OK",
         "computeOnBuildMode": "PARTITION",
         "autoRun": true,
-        "enabled": true
+        "enabled": false
       }
     ],
     "displayedState": {
