Save metrics settings on dataset NONCONFORMITIES.NC_types_random_000_rapport

--- a/datasets/NC_types_random_000_rapport.json
+++ b/datasets/NC_types_random_000_rapport.json
@@ -251,7 +251,8 @@
         "basic:COUNT_COLUMNS",
         "basic:COUNT_FILES",
         "basic:SIZE",
-        "records:COUNT_RECORDS"
+        "records:COUNT_RECORDS",
+        "check:CHECK:SVuVNewg"
       ]
     }
   },
