Saved explore settings of NC_types_random_000_rapport

--- a/explore/NC_types_random_000_rapport.json
+++ b/explore/NC_types_random_000_rapport.json
@@ -186,6 +186,8 @@
               "measureIdx": 0,
               "label": "Count of records, descending"
             },
+            "prefix": "",
+            "suffix": "",
             "multiplier": "Auto",
             "hideTrailingZeros": true,
             "digitGrouping": "DEFAULT",
@@ -211,6 +213,8 @@
             "useParenthesesForNegativeValues": false,
             "shouldFormatInPercentage": false,
             "hideTrailingZeros": true,
+            "prefix": "",
+            "suffix": "",
             "showValue": true,
             "showDisplayLabel": true,
             "labelPosition": "BOTTOM",
