Save data quality config on dataset NC_types_random_000_rapport

--- a/datasets/NC_types_random_000_rapport.json
+++ b/datasets/NC_types_random_000_rapport.json
@@ -277,6 +277,20 @@
         "computeOnBuildMode": "PARTITION",
         "autoRun": true,
         "enabled": false
+      },
+      {
+        "type": "ModeValueInSetRule",
+        "columns": [
+          "llm_validation_status"
+        ],
+        "valueSet": [
+          "VALID"
+        ],
+        "id": "HK9sZsCV",
+        "displayName": "Most frequent value of llm_validation_status is in set",
+        "computeOnBuildMode": "PARTITION",
+        "autoRun": false,
+        "enabled": true
       }
     ],
     "displayedState": {
