Save data quality config on dataset NC_types_random_000_rapport

--- a/datasets/NC_types_random_000_rapport.json
+++ b/datasets/NC_types_random_000_rapport.json
@@ -273,7 +273,7 @@
           "VALID"
         ],
         "id": "HK9sZsCV",
-        "displayName": "Most frequent value of llm_validation_status is in set",
+        "displayName": "Validation JSON sortie LLM mostly OK",
         "computeOnBuildMode": "PARTITION",
         "autoRun": false,
         "enabled": true
