Updated dataset "NONCONFORMITIES.corpus_for_knowledge_engineering" schema

--- a/datasets/corpus_for_knowledge_engineering.json
+++ b/datasets/corpus_for_knowledge_engineering.json
@@ -86,6 +86,7 @@
   },
   "schema": {
     "columns": [
+      {"name":"doc_id","type":"string"},
       {"name":"text","type":"string"}
     ],
     "userModified": false
