Updated schema of NONCONFORMITIES.NC_types_random_000_rapport_structured from recipe in project NONCONFORMITIES

--- a/datasets/NC_types_random_000_rapport_structured.json
+++ b/datasets/NC_types_random_000_rapport_structured.json
@@ -130,12 +130,12 @@
         "mapValues": {"type":"string"}
       },
       {"name":"000_rapport_result_name","type":"string"},
-      {"name":"000_rapport_result_observation","type":"string"},
-      {"name":"000_rapport_result_role","type":"string"},
-      {"name":"000_rapport_result_style","type":"string"},
-      {"name":"000_rapport_result_label","type":"string"},
-      {"name":"000_rapport_result_date","type":"date"},
-      {"name":"000_rapport_result_description","type":"string"},
+      {"name":"000_rapport_observation","type":"string"},
+      {"name":"000_rapport_role","type":"string"},
+      {"name":"000_rapport_style","type":"string"},
+      {"name":"000_rapport_label","type":"string"},
+      {"name":"000_rapport_date","type":"date"},
+      {"name":"000_rapport_description","type":"string"},
       {"name":"000_rapport_sources","type":"array","arrayContent":{"type":"string"}
       }
     ],
